<resources>
    <string name="app_name">Currency Example</string>

    <string name="select_to_compare">Select two rows to compare currencies</string>
    <string name="compare">Compare</string>
    <string name="hint_text">Amount in %1$s</string>
    <string name="error_message">An error has occurred, please try again later.</string>
    <string name="date">Date</string>
    <string name="amount_and_currency">%1$f %2$s</string>
</resources>
