...
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

...
